# supacoda

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  Pulumi.yaml  README.md  __main__.py  launch.sh  preview-deploy.sh  pyproject.toml  requirements.txt  run-build-ctz.sh  run-build.sh  start-server.sh  statestore.yaml  view-last-run-logs-failed.sh
.github/workflows/: deploy.yml  django.yml  docker-image.yml  main_supacoda.yml
cppy/: pyproject.toml
cppy/my-project/: .copier-answers.autopretty.yml  .pre-commit-config.yaml
cppy/tests/: test_cppy.py
ctz/: pyproject.toml
ctz/ctz/: __main__.py  app.py
ctz/tests/: test_ctz.py
frontend/: settings.py  urls.py
landing/: models.py  tests.py  urls.py  views.py
