[tool.poetry]
name = "supacoda"
version = "0.1.0"
description = ""
authors = ["BlurwareAdmin <admin@blurware.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pulumi = "^3.33.2"
pulumi-azure = "^5.8.0"
pulumi-azure-native = "^1.64.1"
typer = "^0.4.1"
azure-identity = "^1.10.0"
azure-mgmt-resource = "^21.1.0"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
