[tool.poetry]
name = "cppy"
version = "0.1.0"
description = ""
authors = ["BlurwareAdmin <admin@blurware.com>"]

[tool.poetry.dependencies]
python = "^3.8"
copier = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autoflake = "^1.4"
pyupgrade = "^2.32.1"
black = "^22.3.0"
blacken-docs = "^1.12.1"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-bugbear = "^22.4.25"
pydocstyle = {extras = ["toml"], version = "^6.1.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
